Grid:  fix Overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,12 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: #fafafa;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 main {
@@ -76,37 +82,32 @@ main {
   margin-right: 2rem;
 }
 
-.card__container-left__card__box:nth-child(1) {
-  border-top: 0.3rem solid #ea5353;
-}
-
 @media only screen and (min-width: 75em) {
   .card__container-grid {
+    max-width: 100%;
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: auto minmax(30rem, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    column-gap: 2rem;
-    row-gap: 2rem;
-    align-items: stretch;
-    align-content: stretch;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    padding: 1rem;
+    margin-right: 50rem;
   }
 
   .card__container-left {
     grid-column: 1/2;
     grid-row: 2/4;
-    align-content: center;
   }
 
   .card__container-center {
     grid-column: 2/3;
     grid-row: 1/4;
-    align-content: center;
+    justify-content: space-between;
   }
 
   .card__container-right {
-    grid-column: 3/4;
-    grid-row: 2/4;
-    align-content: center;
+    grid-column: 3/-1;
+    grid-row: 2/-1;
   }
 }
 .card__box {
