--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -10,7 +10,14 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: $primary;
+    margin: 0;
+    box-sizing: border-box
 }
+
+
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
 
 main {
     width: 100%;
