--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -5,44 +5,38 @@
     margin-right: 2rem;
 }
 
-.card__container-left {
-    &__card__box {
-        &:nth-child(1) {
-            border-top: 0.3rem solid $color-red;
-        }
-    }
-}
+
 
 @include respond-to(desktop) {
     .card__container-grid {
+        max-width: 100%;        
         display: grid;
-        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-columns: auto minmax(30rem,1fr);
         grid-template-rows: repeat(4, 1fr);
-        column-gap: 2rem;
-        row-gap: 2rem;
-        align-items: stretch;        
-        align-content: stretch;       
+        column-gap: 1rem;
+        row-gap: 1rem;
+        padding-right: 4rem;
 
     }
 
     .card__container-left {
         grid-column: 1 / 2;
-        grid-row: 2 / 4;
-        align-content: center;
+        grid-row: 2 / 4;      
     }
 
     .card__container-center {
         grid-column: 2 / 3;
         grid-row: 1 / 4;
-        align-content: center;
+        justify-content: space-between;
+      
+  
     }
 
     .card__container-right {
-        grid-column: 3 / 4;
-        grid-row: 2 / 4;
-        align-content: center;
+        grid-column: 3 / -1;
+        grid-row: 2 / -1;        
     }
-   
+
 }
 
 .card__box {
@@ -54,7 +48,6 @@
     box-shadow: 0px 7px 9px 5px rgba(207, 201, 207, 1);
     padding: 1rem;
     margin-bottom: 1rem;
-
 
     &.top-color-cyan {
         border-top: 0.3rem solid $color-cyan;
